# vinyl-reel-obs-plugin

./: .gitignore  CMakeLists.txt  PROJECT_SCOPE.md  README.md
.github/workflows/: release.yml
ci/: CMakeLists.txt  buildspec.json
data/locale/: en-US.ini
docs/: DEV_WORKFLOW.md
include/: obs-frontend-api.h  obs-module.h
mac/: Info.plist
scripts/: build-macos.sh  build-windows.ps1  open-obs-macos.sh  package-windows-installer.ps1
src/: plugin-main.cpp
windows/: vinyl-reel.iss
